--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -15,6 +15,11 @@
             android:title="Cart"
             android:iconTint="@color/white"/>
         <item
+            android:id="@+id/nav_whislist"
+            android:icon="@drawable/nav_whislist"
+            android:title="Whislist"
+            android:iconTint="@color/white"/>
+        <item
             android:id="@+id/nav_search"
             android:icon="@drawable/search"
             android:title="Search"
