--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -108,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/foundation_category"
-            android:text="Foundation"
+            android:text="Makeup"
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:textSize="20dp"
