--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -49,6 +49,6 @@
         android:layout_height="wrap_content"
         android:background="@drawable/buttons"
         android:textColor="@color/white"
-        android:text="Send email"
+        android:text="Send new password"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
