--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,25 +9,26 @@
 
     <ImageView
         android:id="@+id/app_logo"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="90dp"
         android:src="@drawable/applogo"
         />
 
     <TextView
         android:id="@+id/app_slogan"
-        android:layout_width="220dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="88dp"
-        android:layout_marginTop="140dp"
-        android:text="Discover,Try,Purchase"
+        android:layout_below="@id/app_logo"
+        android:layout_marginTop="-15dp"
+        android:layout_centerHorizontal="true"
+        android:text="Discover, Try, Purchase"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
-        android:textSize="22dp"
+        android:textSize="18dp"
         android:textStyle="bold|italic"
         />
 
