--- a/app/src/main/res/layout/activity_make_up.xml
+++ b/app/src/main/res/layout/activity_make_up.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ARactivities.MakeUpActivity">
+    tools:context=".ARactivities.PlaceMakeUpActivity">
 
     <fragment android:name="com.shop.ARactivities.AugmentedFaceFragment"
         android:id="@+id/face_view"
